app/resources/assets/sass/media/_mobile.scss
/*!
 * Copyright (C) University of Sussex 2018.
 * Unauthorized copying of this file, via any medium is strictly prohibited
 * Written by Lewis Johnson <lj234@sussex.com>
 */

@media screen and (min-width: $mobile-width) {
	// Header & Navigation
	.mobile-nav-underlay {
		display: none !important;
	}

	nav.mobile {
		display: none;
	}

	nav.desktop {
		visibility: visible;
		max-height: 50px;
	}

	.mobile-menu-container {
		visibility: hidden;
		max-width: 0;
	}

	header {
		padding: 5px 10px;

		.logo-container {
			visibility: visible;
			top: 0px;
			left: 0px;
			opacity: 1;
			z-index: 8;
			margin-right: 20px;
		}

		> a {
			h1 {
				font-size: 140%;
			}
		}
	}

	.card--half {
		width: 49%;
	}

	// Tab
	.card.tab-card {
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
		padding: 0;

		.content-host {
			overflow: hidden;
			padding: 1rem;
			flex-grow: 1;
			border-left: 1px solid $form-border-color;
			flex: 0 0 80%;

			.content {
				padding-top: 0;
			}
		}

		ul.tab-container {
			flex: 0 0 20%;
			flex-direction: column;
			flex-shrink: 0;
			overflow: hidden;
			background: rgba(0, 0, 0, 0.01);
			box-shadow: 2px 0px 6px 0px rgba(0, 0, 0, 0.1);

			button.button {
				text-align: left;
				width: 100%;
			}
		}

		.footer {
			margin: 0;
			width: 100%;
			flex: 1 1 100%;
		}
	}
}

@media screen and (max-width: 1200px) {
	.main-content {
		padding: 3rem 1rem !important;
	}
}

@media screen and (max-width: $mobile-width) {
	.morph-dropdown-wrapper {
		display: none;
	}

	.card-container {
		.card {
			margin-bottom: 20px;
		}
	}

	ul.dot-menu {
		.dot-menu__item--padded {
			padding: 16px;
		}
	}

	#assign-dialog {
		.arrow {
			p {
				font-size: 12vw;
			}
		}
	}

	.mask {
		display: block;
	}

	ul.tab-container {
		overflow-x: scroll;
	}

	.table-action-header, .table-action {
		display: none;
	}

	.table-mobile-menu-header, .table-mobile-menu {
		display: table-cell;
	}

	.main-content {
		padding: 0 1rem;
		padding-bottom: 7rem !important;
		overflow-x: scroll;
	}

	.section-container {
		flex-wrap: wrap;

		.section {
			width: 100%;
			margin: 7px auto !important;
		}
	}

	.hub {
		width: 100%;

		.section {
			width: 100%;
			margin: 7px auto !important;
		}
	}

	.hub-container {
		> .header {
			flex-wrap: wrap;

			.title {
				display: inline-block;
				flex: 1 0 70%;
			}

			.svg-container {
				display: inline-block;
				flex: 1 0 10%;
			}

			.actions {
				margin-top: 1rem;
			}
		}
	}

	.mobile--hidden {
		visibility: hidden;
		display: none;
	}

	.edit-list {
		.item {
			width: 100%;
		}

		.item:nth-child(odd) {
			margin-right: 0;
		}
	}

	.dialog {
		left: 2vw;
		right: 2vw;
	}

	// SEARCH
	.search-filter-container.active {
		max-height: 170px;
	}

	.search-filter {
		li {
			display: block;
			margin: 0 0 1rem 0;
		}
	}

	.alpha-header {
		top: 40px;
	}

	// TABLE
	th, td {
		padding: 8px;
	}

	td:first-of-type, th:first-of-type {
		padding-left: 8px;
	}

	td:last-of-type, th:last-of-type {
		padding-right: 8px;
		text-align: right;
	}

	footer {
		height: auto;
		padding: 10px;

		.footer-right, .footer-left {
			position: relative;
			width: 100%;
		}

		a, p {
			padding: 6px;
		}

		a, p, li {
			display: block;
			width: 100%;
		}

		.hl li {
			display: block;
		}

		.separator {
			display: none;
		}
	}
}

@media screen and (max-width: 500px) {
	.header-education-level-list {
		text-align: right;

		li {
			display: block !important;
		}
	}

	.header-department-list {
		li {
			display: block !important;
		}
	}
}

@media screen and (max-width: 410px) {
	.nav.mobile h3 {
		padding-left: 0;
	}

	header {
		> a {
			width: 100%;
			padding: 0;
			margin: 0;
			h1 {
				text-align: center;
			}
		}

		.logo-container {
			display: none;
		}
	}

	.logo-container {
		display: none;
	}

	.mobile-menu-container {
		margin: 0 auto;
		max-width: none;
	}
}

